--- a/css/style.css
+++ b/css/style.css
@@ -82,7 +82,6 @@ a {
     font-size: 20px;
     color: var(--pixel);
     letter-spacing: 2px;
-    height: 100vh;
 }
 
 @keyframes blink {
@@ -163,6 +162,16 @@ a {
     border-radius: 50%;
     object-fit: cover;
     opacity: 0.7;
+
+}
+
+.left a {
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    -webkit-touch-callout: none;
+    -webkit-tap-highlight-color: transparent;
 }
 
 .theme-btn {
@@ -215,8 +224,7 @@ a {
     line-height: 1.4;
     font-family: 'BoldPixels', monospace;
     transition: 0.15s ease;
-    height:auto;
-    overflow: scroll;
+    height: 100%;
 }
 
 body.dark .content {
@@ -277,6 +285,12 @@ body.dark .line {
     color: var(--pixel);
     background: var(--btn);
     box-shadow: 0 2px rgba(0, 0, 0, 0.12);
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    -webkit-touch-callout: none;
+    -webkit-tap-highlight-color: transparent;
 }
 
 .nav button.active {
