--- a/css/style.css
+++ b/css/style.css
@@ -2,9 +2,15 @@
 
 /* --- BASE FONT --- */
 @font-face {
-    font-family: 'BoldPixels';
-    src: url('../fonts/BoldPixels.ttf') format('truetype');
+    font-family: "BoldPixels";
+    src: url("/fonts/BoldPixels.ttf") format("truetype");
 }
+
+@font-face {
+    font-family: "GeoPixels";
+    src: url("/fonts/GeoPixels.ttf") format("truetype");
+}
+
 
 /* --- COLORS --- */
 :root {
@@ -28,6 +34,37 @@
     display: none;
 }
 
+body.font-az * {
+    font-family: "BoldPixels", sans-serif;
+    font-size: 2rem;
+}
+
+body.font-en * {
+    font-family: "Press Start 2P", sans-serif;
+    font-size: 1.1rem;
+    line-height: 1.82;
+}
+
+body.font-ge * {
+    font-family: "GeoPixels", sans-serif;
+    font-size: 1.6rem;
+    line-height: 1.25;
+}
+
+body.font-ge .latin {
+    font-family: "Press Start 2P", sans-serif !important;
+    font-size: 1.1rem!important;
+    line-height: 2!important;
+}
+
+/* --- FONT IMMUNE AREA --- */
+.font-safe,
+.font-safe * {
+    font-family: "Press Start 2P" !important;
+    font-size: 1rem !important;
+    line-height: 1 !important;
+}
+
 body.dark {
     --bg: #071717;
     --screen: #162626;
@@ -47,7 +84,6 @@ body.dark {
 body {
     margin: 0;
     height: auto;
-    font-family: 'Press Start 2P', monospace;
     background: var(--bg);
     background: linear-gradient(180deg, var(--screen), var(--screen-dark));
     color: var(--pixel);
@@ -87,7 +123,7 @@ a {
     align-items: center;
     flex-direction: column;
     z-index: 10;
-    font-size: 20px;
+    font-size: 1.25rem;
     color: var(--pixel);
     letter-spacing: 2px;
     height: 100vh;
@@ -118,7 +154,6 @@ a {
     justify-content: space-between;
     align-items: center;
     border-bottom: 3px solid rgba(0, 0, 0, 0.15);
-    font-size: 13px;
 }
 
 .left {
@@ -128,7 +163,7 @@ a {
     font-weight: 700;
     color: var(--pixel);
     gap: 8px;
-    font-size: 7px;
+    font-size: 0.438rem;
 }
 
 .left div {
@@ -189,7 +224,7 @@ a {
     border: 2px solid rgba(0, 0, 0, 0.2);
     border-radius: 6px;
     font-weight: 700;
-    font-size: 12px;
+    font-size: 0.75rem !important;
     cursor: pointer;
     color: var(--pixel);
 }
@@ -197,6 +232,31 @@ a {
 .theme-btn:hover {
     transform: translateY(-1px);
 }
+
+#langSelect {
+    font-family: 'Press Start 2P', monospace;
+    background: transparent;
+    color: var(--pixel);
+    border: 3px solid var(--muted);
+    border-radius: 4px;
+    padding: 6px 10px;
+    font-size: 0.75rem !important;
+    outline: none;
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    cursor: pointer;
+    transition: 0.2s ease;
+}
+
+
+#langSelect option {
+    background: var(--screen-dark);
+    color: var(--pixel);
+    font-size: 0.75rem !important;
+}
+
+
 
 /* --- SCREEN --- */
 
@@ -218,7 +278,7 @@ a {
 
 .clock {
     text-align: center;
-    font-size: 46px;
+    font-size: 2.875rem !important;
     font-weight: 700;
     color: var(--pixel);
     margin-bottom: 15px;
@@ -228,9 +288,6 @@ a {
     background: rgba(255, 255, 255, 0.23);
     padding: 20px;
     box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.25);
-    font-size: 28px;
-    line-height: 1.4;
-    font-family: 'BoldPixels', monospace;
     height: 45vh;
     overflow-y: scroll;
 }
@@ -247,17 +304,13 @@ body.dark .content {
 
 .item-title-desk,
 .item-title-desk {
-    font-size: 30px;
     margin-bottom: 8px;
-    font-family: 'BoldPixels', monospace;
 }
 
 .item-title,
 .item-title-desk,
 .item-title-desk {
-    font-size: 30px;
     margin-bottom: 8px;
-    font-family: 'BoldPixels', monospace;
 }
 
 .item-title-mb {
@@ -298,7 +351,6 @@ body.dark .line {
     padding: 10px;
     border-radius: 6px;
     font-weight: 700;
-    font-size: 14px;
     border: none;
     cursor: pointer;
     color: var(--pixel);
@@ -395,6 +447,7 @@ body.dark .nav button.active {
     .left {
         zoom: 0.6;
     }
+
     .content {
         font-size: 20px;
     }
