--- a/css/style.css
+++ b/css/style.css
@@ -53,16 +53,16 @@ body.font-ge * {
 
 body.font-ge .latin {
     font-family: "Press Start 2P", sans-serif !important;
-    font-size: 1.1rem!important;
-    line-height: 2!important;
+    font-size: 1.1rem !important;
+    line-height: 2 !important;
 }
 
 /* --- FONT IMMUNE AREA --- */
 .font-safe,
 .font-safe * {
     font-family: "Press Start 2P" !important;
-    font-size: 1rem !important;
     line-height: 1 !important;
+    font-size: 1.1rem !important;
 }
 
 body.dark {
@@ -163,7 +163,6 @@ a {
     font-weight: 700;
     color: var(--pixel);
     gap: 8px;
-    font-size: 0.438rem;
 }
 
 .left div {
@@ -224,7 +223,6 @@ a {
     border: 2px solid rgba(0, 0, 0, 0.2);
     border-radius: 6px;
     font-weight: 700;
-    font-size: 0.75rem !important;
     cursor: pointer;
     color: var(--pixel);
 }
@@ -240,7 +238,6 @@ a {
     border: 3px solid var(--muted);
     border-radius: 4px;
     padding: 6px 10px;
-    font-size: 0.75rem !important;
     outline: none;
     appearance: none;
     -webkit-appearance: none;
@@ -302,14 +299,10 @@ body.dark .content {
     box-shadow: inset 0 2px 4px rgba(255, 255, 255, 0.08);
 }
 
-.item-title-desk,
-.item-title-desk {
-    margin-bottom: 8px;
-}
 
 .item-title,
 .item-title-desk,
-.item-title-desk {
+.item-title-mb {
     margin-bottom: 8px;
 }
 
@@ -317,7 +310,7 @@ body.dark .content {
     display: none;
 }
 
-.item-title-mb span {
+.item-title-mb span.joystik {
     filter: grayscale(100%);
     -webkit-filter: invert(100%);
 }
@@ -350,7 +343,6 @@ body.dark .line {
     flex: 1 1 100px;
     padding: 10px;
     border-radius: 6px;
-    font-weight: 700;
     border: none;
     cursor: pointer;
     color: var(--pixel);
@@ -430,26 +422,52 @@ body.dark .nav button.active {
 
 /* --- MEDIA QUERIES --- */
 @media (max-width: 1024px) {
-    .content {
-        font-size: 24px;
-    }
-
-    .item-title-desk {
-        font-size: 26px;
-    }
 
     .clock {
-        font-size: 38px;
+        font-size: 2.375rem !important;
     }
+
+    body.font-az * {
+        font-family: "BoldPixels", sans-serif;
+        font-size: 1.5rem;
+    }
+
+    body.font-en * {
+        font-family: "Press Start 2P", sans-serif;
+        font-size: 0.825rem;
+    }
+
+    body.font-ge * {
+        font-family: "GeoPixels", sans-serif;
+        font-size: 1.2rem;
+    }
+
+    body.font-ge .latin {
+        font-family: "Press Start 2P", sans-serif !important;
+        font-size: 1.1rem !important;
+
+    }
+
+    .font-safe,
+    .font-safe * {
+        font-family: "Press Start 2P" !important;
+        line-height: 1 !important;
+        font-size: 0.825rem !important;
+    }
+
 }
 
 @media (max-width: 768px) {
-    .left {
+
+    .profil {
         zoom: 0.6;
     }
 
-    .content {
-        font-size: 20px;
+    .font-safe,
+    .font-safe * {
+        font-family: "Press Start 2P" !important;
+        line-height: 1 !important;
+        font-size: 0.6875rem !important;
     }
 
     .item-title-desk {
@@ -459,11 +477,10 @@ body.dark .nav button.active {
 
     .item-title-mb {
         display: block;
-        font-size: 24px;
     }
 
     .clock {
-        font-size: 34px;
+        font-size: 2.125rem !important;
     }
 
     :root {
@@ -476,7 +493,7 @@ body.dark .nav button.active {
 
 
     .clock {
-        font-size: 28px;
+        font-size: 1.75rem !important;
     }
 
     :root {
