--- a/css/style.css
+++ b/css/style.css
@@ -208,6 +208,10 @@ a {
 }
 
 .left a {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
@@ -222,7 +226,6 @@ a {
     background: var(--btn);
     border: 2px solid rgba(0, 0, 0, 0.2);
     border-radius: 6px;
-    font-weight: 700;
     cursor: pointer;
     color: var(--pixel);
 }
