--- a/css/style.css
+++ b/css/style.css
@@ -265,6 +265,8 @@ a {
     flex-direction: column;
     box-shadow: inset 0 4px 8px rgba(0, 0, 0, 0.3);
     height: auto;
+    overflow: hidden;
+    position: relative;
 }
 
 .brand {
@@ -422,9 +424,7 @@ body.dark .nav button.active {
     -o-transform: translateX(-50%);
 }
 
-.content-wrapper {
-    position: relative;
-}
+
 
 #content {
     position: relative;
@@ -434,33 +434,35 @@ body.dark .nav button.active {
 .kura-burn {
     position: absolute;
     top: 50%;
-    right: 10%;
-    height: 60%;
-    opacity: 0.2;
-    z-index: 1;
+    left: 70%;
+    height: 120%;
+    opacity: 0.1;
+    z-index: 3;
     pointer-events: none;
     image-rendering: pixelated;
     filter: blur(1px) brightness(1.3);
     animation: burnRotate 6s steps(8) infinite;
     -webkit-animation: burnRotate 6s steps(8) infinite;
 }
+
 @keyframes burnRotate {
     from {
-        transform: translate(0, -50%) rotate(0deg);
-        -webkit-transform: translate(0, -50%) rotate(0deg);
-        -moz-transform: translate(0, -50%) rotate(0deg);
-        -ms-transform: translate(0, -50%) rotate(0deg);
-        -o-transform: translate(0, -50%) rotate(0deg);
-}
+        transform: translate(-50%, -50%) rotate(0deg);
+        -webkit-transform: translate(-50%, -50%) rotate(0deg);
+        -moz-transform: translate(-50%, -50%) rotate(0deg);
+        -ms-transform: translate(-50%, -50%) rotate(0deg);
+        -o-transform: translate(-50%, -50%) rotate(0deg);
+    }
 
     to {
-        transform: translate(0, -50%) rotate(360deg);
-        -webkit-transform: translate(0, -50%) rotate(360deg);
-        -moz-transform: translate(0, -50%) rotate(360deg);
-        -ms-transform: translate(0, -50%) rotate(360deg);
-        -o-transform: translate(0, -50%) rotate(360deg);
+        transform: translate(-50%, -50%) rotate(360deg);
+        -webkit-transform: translate(-50%, -50%) rotate(360deg);
+        -moz-transform: translate(-50%, -50%) rotate(360deg);
+        -ms-transform: translate(-50%, -50%) rotate(360deg);
+        -o-transform: translate(-50%, -50%) rotate(360deg);
+    }
 }
-}
+
 
 
 /* --- MEDIA QUERIES --- */
@@ -532,6 +534,10 @@ body.dark .nav button.active {
         font-family: "Press Start 2P" !important;
         line-height: 1 !important;
         font-size: 0.6875rem !important;
+    }
+
+    .kura-burn {
+        height: 80%;
     }
 
     .item-title-desk {
